# reist-crypto-bench

./: .gitignore  CMakeLists.txt  Makefile  README-Benchmark.md  README.md  README_DE.md  results_modadd_suite.csv  results_modadd_suite_neon.csv  results_poly_mod.csv
docs/: BENCHMARKS.md  M2_PRO_BENCHMARK.md  REIST_Appendix_Community_Feedback.md  REIST_Appendix_Community_Feedback_DE.md
include/: reist_mod.hpp
scripts/: create_diagram.py  create_interval_comparison.py  generate_benchmark_doc.py  generate_benchmark_report.py  plot_benchmarks.py  run_all.sh
src/: bench_barret_reist.cpp  bench_chacha_reist.cpp  bench_chacha_stream.cpp  bench_hashmix.cpp  bench_modadd_suite.cpp  bench_modadd_suite_neon.cpp  bench_modular.cpp  bench_mont_vs_reist_tree_ntt.cpp  bench_montgomery.cpp  bench_poly_mod.cpp  bench_reist_arm.cpp  bench_tree_reist.cpp  bench_tree_reist_avx2.cpp  bench_tree_reist_neon.cpp  reist_neon_diag_mt.cpp
tests/: test_reist.cpp
tests/results/arm/: 20251210_133024_bench_chacha_reist_O0.txt  20251210_133024_bench_chacha_stream_O0.txt  20251210_133024_bench_hashmix_O0.txt  20251210_133024_bench_modadd_suite_O0.txt  20251210_133024_bench_modular_O0.txt  20251210_133024_bench_poly_mod_O0.txt  20251210_133024_bench_reist_arm_O0.txt  20251210_133024_results_modadd_suite.csv  20251210_133024_results_poly_mod.csv  20251210_133227_bench_chacha_reist_O0.txt  20251210_133227_bench_chacha_stream_O0.txt  20251210_133227_bench_hashmix_O0.txt  20251210_133227_bench_modadd_suite_O0.txt  20251210_133227_bench_modular_O0.txt  (+96 more)
tools/: check_compiler_artifacts.sh
(+311 files in other folders)
